--- a/package.json
+++ b/package.json
@@ -8,20 +8,37 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/marked": "^5.0.2",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "html2canvas": "^1.4.1",
+    "marked": "^16.3.0",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@types/axios": "^0.9.36",
+    "@types/html2canvas": "^0.5.35",
+    "@types/node": "^24.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.9",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.5.21",
+    "@vue/runtime-dom": "^3.5.21",
     "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "~4.9.5"
   },
   "eslintConfig": {
     "root": true,
@@ -30,10 +47,14 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
     ],
+    "parser": "vue-eslint-parser",
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@typescript-eslint/parser",
+      "ecmaVersion": 2020,
+      "sourceType": "module"
     },
     "rules": {}
   },
