--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/dompurify": "^3.2.0",
+    "@types/highlight.js": "^9.12.4",
     "@types/marked": "^5.0.2",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "core-js": "^3.8.3",
+    "dompurify": "^3.2.7",
+    "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
     "marked": "^16.3.0",
     "vue": "^3.2.13",
@@ -32,10 +37,11 @@
     "@vue/cli-plugin-typescript": "^5.0.9",
     "@vue/cli-service": "~5.0.0",
     "@vue/compiler-sfc": "^3.5.21",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/runtime-dom": "^3.5.21",
     "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~4.9.5"
