--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/runtime-dom": "^3.5.21",
     "autoprefixer": "^10.4.21",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.5.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~4.9.5"
   },
