--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "core-js": "^3.8.3",
+    "countries-list": "^3.1.1",
     "dompurify": "^3.2.7",
     "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
@@ -23,7 +24,8 @@
     "marked": "^16.3.0",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-select": "^4.0.0-beta.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
